--- a/.github/workflows/master_callebach.yml
+++ b/.github/workflows/master_callebach.yml
@@ -26,12 +26,20 @@ jobs:
           npm install
           npm run build --if-present
           npm run test --if-present
+          
+      # Zip the build directory
+      
+      - name: Zip Release
+        uses: TheDoctor0/zip-release@0.7.1
+        with:
+          filename: release.zip
+          path: ./build/*
       
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
         with:
           name: node-app
-          path: .
+          path: release.zip
 
   deploy:
     runs-on: ubuntu-latest
@@ -53,4 +61,4 @@ jobs:
           app-name: 'callebach'
           slot-name: 'Production'
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_0E86936175BD434FB0D44B905101D552 }}
-          package: .
+          package: release.zip
